refactor: enhance game initialization and scene setup
- Updated scaling logic in createGameScene for better responsiveness.
- Removed unused desk layer code for cleaner scene management.
- Improved main.js with detailed comments on game settings and debug information.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
 <title>cheating-a-test-game</title>
 </head>
-<body style="overflow:hidden">
+<body style="overflow:hidden" >
 <script src="src/main.js" type="module"></script>
+<style>
+  html, body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+</style>
 </body>
 </html>
